--- a/recipes/lasagna.html
+++ b/recipes/lasagna.html
@@ -39,5 +39,24 @@
             </li>
             <li><strong>Egg</strong></li>
         </ul>
+        <h2>Steps</h2>
+        <ol>
+            <li>Make the meat sauce.</li>
+            <li>Cook the noodles.</li>
+            <li>Make the ricotta mixture.</li>
+            <li>Layer the lasagna:
+                <ol>
+                    <li>Meat sauce</li>
+                    <li>Noodles</li>
+                    <li>Ricotta mixture</li>
+                    <li>Mozzarella slices</li>
+                    <Li>Meat sauce</Li>
+                    <li>Parmesan cheese</li>
+                    <li>Repeat the layers, then top with the remaining Parmesan.</li>
+                </ol>
+            </li>
+            <li>Cover with foil and bake.</li>
+            <li>Let the lasagna rest before serving.</li>
+        </ol>
     </body>
 </html>
