Added new recipes I created two new link to other recipes and copy and pasted the lasagna's code in the new ones to have a template to work faster.

--- a/index.html
+++ b/index.html
@@ -8,5 +8,7 @@
     <body>
         <h1>Odin Recipes</h1>
         <a href="recipes/lasagna.html">Lasagna</a>
+        <a href="recipes/carbonara.html">Carbonara</a>
+        <a href="recipes/pasta-e-patate.html">Pasta e patate</a>
     </body>
 </html>
