Carbonara page finished I coded the new recipe page modifying the template previously copied and pasted.

--- a/recipes/carbonara.html
+++ b/recipes/carbonara.html
@@ -6,57 +6,25 @@
     </head>
 
     <body>
-        <h1>Lasagna</h1>
-        <img src="../images/lasagna.jpg" alt="Image of a Lasagna" height="350" width="350">
-        <p>Sunday, family lunch: if we try to close our eyes, she comes to mind, the queen of the italian holiday table: <strong>lasagna</strong>.</p><br>
-        <p>First of all, <em>what is lasagna?</em> It is nothing more than a series of rectangular sheets of pasta, <em>made from egg or durum wheat</em>, boiled, then arranged in layers in a baking dish or oven dish, alternating with a filling, which can vary according to regional customs.<br>
-        <em>The traditional recipe calls for meat sauce and bechamel sauce.</em></p>
+        <h1>Carbonara</h1>
+        <img src="../images/carbonara.jpg" alt="Image of a Carbonara" height="350" width="500">
+        <p>Carbonara is made with <em>guanciale (cured pork), eggs, Pecorino Romano cheese, spaghetti pasta, and lots of black pepper.</em> Italians <strong>don't add extra ingredients</strong> like cream, milk, garlic, or onions.</p><br>
+        <p>Try this recipe if you want to make an authentic, creamy carbonara that comes straight from Italy, where I live.<br>
+        <em>Buon appetito!</em></p>
         <h2>Ingredients</h2>
         <ul>
-            <li><strong>Meat</strong>
-                <ul>
-                    <li>Italian sausage</li>
-                    <li>Lean Ground</li>
-                </ul>
-            </li>
-            <li><strong>Onion and garlic</strong></li>
-            <li><strong>Tomato products</strong>
-                <ul>
-                    <li>Can of crushed tomatoes</li>
-                    <li>Cans of tomato sauce</li>
-                    <li>Cans of tomato paste</li>
-                </ul>
-            </li>
-            <li><strong>Sugar</strong></li>
-            <li><strong>Spices and seasonings</strong></li>
-            <li><strong>Lasagna noodles</strong></li>
-            <li><strong>Cheeses</strong>
-                <ul>
-                    <li>Parmesan</li>
-                    <li>Mozzarella</li>
-                    <li>Ricotta cheese</li>
-                </ul>
-            </li>
-            <li><strong>Egg</strong></li>
-        </ul>
+            <li><strong>Guanciale</strong> (cured pork cheek)</li>
+            <li><strong>Spaghetti</strong></li>
+            <li><strong>Eggs</strong></li>
+            <li><strong>Pecorino Romano cheese</strong></li>
+            <li><strong>Salt and pepper</strong></li>
         <h2>Steps</h2>
         <ol>
-            <li>Make the meat sauce.</li>
-            <li>Cook the noodles.</li>
-            <li>Make the ricotta mixture.</li>
-            <li>Layer the lasagna:
-                <ol>
-                    <li>Meat sauce</li>
-                    <li>Noodles</li>
-                    <li>Ricotta mixture</li>
-                    <li>Mozzarella slices</li>
-                    <Li>Meat sauce</Li>
-                    <li>Parmesan cheese</li>
-                    <li>Repeat the layers, then top with the remaining Parmesan.</li>
-                </ol>
-            </li>
-            <li>Cover with foil and bake.</li>
-            <li>Let the lasagna rest before serving.</li>
+            <li>Cook the pork until browned and crispy, then drain on paper towels.</li>
+            <li>Boil the spaghetti in salted water. Drain and return to the pot.</li>
+            <li>Whisk the eggs, 1/2 of the cheese, a bit of gaunciale's melted fat and some pepper in a bowl until smooth.</li>
+            <li>Pour the egg mixture over the pasta, stirring quickly, until creamy.</li>
+            <li>Stir in the pork, then top with the remaining cheese and more black pepper.</li>
         </ol>
     </body>
 </html>
