Recipe page finished + a correction for carbonara. I coded the pasta e patate page modifying the template I copied and pasted. I corrected an ul tag in carbonara page that I didn't close in the right point.

--- a/recipes/pasta-e-patate.html
+++ b/recipes/pasta-e-patate.html
@@ -6,57 +6,33 @@
     </head>
 
     <body>
-        <h1>Lasagna</h1>
-        <img src="../images/lasagna.jpg" alt="Image of a Lasagna" height="350" width="350">
-        <p>Sunday, family lunch: if we try to close our eyes, she comes to mind, the queen of the italian holiday table: <strong>lasagna</strong>.</p><br>
-        <p>First of all, <em>what is lasagna?</em> It is nothing more than a series of rectangular sheets of pasta, <em>made from egg or durum wheat</em>, boiled, then arranged in layers in a baking dish or oven dish, alternating with a filling, which can vary according to regional customs.<br>
-        <em>The traditional recipe calls for meat sauce and bechamel sauce.</em></p>
+        <h1>Pasta e patate</h1>
+        <img src="../images/pasta-e-patate.jpg" alt="Image of Pasta e patate" height="350" width="350">
+        <p>If you’re not yet familiar with <strong>Neapolitan-style pasta and potatoes</strong>, you’re about to experience a whole new world!</p><br>
+        <p>What we have here is a dish of humble origins. Pasta and potatoes came about as a result of the need for <em>hearty and comforting one-pot dishes</em> that first and foremost contained lots of carbohydrates, courtesy of the two main ingredients.<br>
+        <em>Keen to find out how to make this wonderful Neapolitan-style pasta and potatoes yourself?</em></p>
         <h2>Ingredients</h2>
         <ul>
-            <li><strong>Meat</strong>
-                <ul>
-                    <li>Italian sausage</li>
-                    <li>Lean Ground</li>
-                </ul>
-            </li>
-            <li><strong>Onion and garlic</strong></li>
-            <li><strong>Tomato products</strong>
-                <ul>
-                    <li>Can of crushed tomatoes</li>
-                    <li>Cans of tomato sauce</li>
-                    <li>Cans of tomato paste</li>
-                </ul>
-            </li>
-            <li><strong>Sugar</strong></li>
-            <li><strong>Spices and seasonings</strong></li>
-            <li><strong>Lasagna noodles</strong></li>
-            <li><strong>Cheeses</strong>
-                <ul>
-                    <li>Parmesan</li>
-                    <li>Mozzarella</li>
-                    <li>Ricotta cheese</li>
-                </ul>
-            </li>
-            <li><strong>Egg</strong></li>
+            <li><strong>Mixed pasta</strong></li>
+            <li><strong>Potatoes</strong></li>
+            <li><strong>Celery</strong></li>
+            <li><strong>Carrots</strong></li>
+            <li><strong>Onions</strong></li>
+            <li><strong>Lard</strong> (pork's fat)</li>
+            <li><strong>Tomato paste</strong></li>
+            <li><strong>Parmigiano Reggiano cheese</strong></li>
+            <li><strong>Olive oil</strong></li>
+            <li><strong>Seasonings</strong></li>
         </ul>
         <h2>Steps</h2>
         <ol>
-            <li>Make the meat sauce.</li>
-            <li>Cook the noodles.</li>
-            <li>Make the ricotta mixture.</li>
-            <li>Layer the lasagna:
-                <ol>
-                    <li>Meat sauce</li>
-                    <li>Noodles</li>
-                    <li>Ricotta mixture</li>
-                    <li>Mozzarella slices</li>
-                    <Li>Meat sauce</Li>
-                    <li>Parmesan cheese</li>
-                    <li>Repeat the layers, then top with the remaining Parmesan.</li>
-                </ol>
-            </li>
-            <li>Cover with foil and bake.</li>
-            <li>Let the lasagna rest before serving.</li>
+            <li>Chop celery, carrot, onion, potatoes and lard.</li>
+            <li>Heat oil and add the lard to make it melt.</li>
+            <li>Add chopped onion, carrots and celery. After a few minutes add potatoes</li>
+            <li>Add tomato paste, 2 cups of water and seasoning.</li>
+            <li>Cook at low heat for 30 minutes. Add water if needed.</li>
+            <li>Put pasta, add a cup of water and make it boil.</li>
+            <li>Serve the pasta!</li>
         </ol>
     </body>
 </html>
